
configxml.html:
----------------------
* Included link to timebuild in modificationset documentation.

config.xml:
----------------------
* Allow preconfiguration of <log ..> element and sub-elements. Patch by Jerome Lacoste.
* Allow preconfiguration of project and subelements (CC-352). Patch by Jerome Lacoste.

CVS.java:
----------------------
* Deprecated CVS.java in favor of ConcurrentVersionsSystem.java to overcome issues with directory/filename conflicts, specifically with Eclipse IDE (CC-164). Note: CVS.java and other deprecated methods/classes are scheduled for deletion in the 3.0 release.

general:
----------------------
* Minor changes to make code jdk 1.3 compliant.
* Added fast-md5.jar to manifest for cruisecontrol.jar
* Deprecated the command-line argument named "port" in favor of "jmxport" to be more explicit.
* Javadoc, code, and test deprecation cleanup. Patch by Brad Clarke.
* New system property named "cruisecontrol.rmiport" set when -rmiport specified on the command line.
* Delete temp files created by tests (CC-344). Patch by Mark Doliner.

JMX interface:
----------------------
* When setting the configuration contents via JMX, the contents are validated (CC-333). Patch by Allan Wick.

MergeLogger:
----------------------
* cleanly skip non existing log files and directories

NavigationTag:
----------------------
* Remove support for log files timestamped without a second part

Project:
----------------------
* Remove methods to get/set config file from Project and corresponding jmx interface classes
* ModificationSet is no longer a required element; when missing builds must be forced.

Schedule:
----------------------
* Fix getTimeToNextBuild to adjust for daylight savings time (CC-104).

SfeeFrsPublisher:
----------------------
* A new publisher for uploading files to a SourceForge Enterprise Edition's File Release System.

VSSJournal:
----------------------
* handle dirs with same prefix (CC-307).  Patch by Dan Rollo.

reporting jsp app